:bug: Add overflow on x-axis in popup

--- a/src/styles/popup/_styles.scss
+++ b/src/styles/popup/_styles.scss
@@ -22,7 +22,10 @@
         max: {
             height: calc(80vh - #{variables.$padding} * 4);
         }
-        overflow-y: scroll;
+        overflow: {
+            y: scroll;
+            x: hidden;
+        }
         @include utils.scrollbar();
     }
     .button {
