--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -9,7 +9,6 @@
 ) {
     &::-webkit-scrollbar {
         width: susanoo.rem-calc($width);
-        overflow-x: hidden;
     }
     &::-webkit-scrollbar-thumb {
         background: {
